[project]
name = "power-rankings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "click>=8.1.7",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "pyquery>=0.13.2",
    "seaborn",
    "typer",
]

[project.scripts]
power-rankings = 'power_rankings.power_rankings:cli'
team-spotlight = 'power_rankings.team_spotlight:cli'
all-time = 'power_rankings.all_time:cli'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "flake8>=7.1.1",
    "ipdb>=0.13.13",
    "ipython>=8.27.0",
    "jupyter",
    "pre-commit>=3.8.0",
    "ruff",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"
